--- a/Material 2/JavaFxSample/src/main/HelloWorld.fxml
+++ b/Material 2/JavaFxSample/src/main/HelloWorld.fxml
@@ -1,15 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.chart.AreaChart?>
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-
-<AnchorPane prefHeight="521.0" prefWidth="603.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.141">
+<AnchorPane prefHeight="521.0" prefWidth="603.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Pane layoutY="2.0" prefHeight="521.0" prefWidth="631.0">
          <children>
             <Label layoutX="268.0" layoutY="247.0" text="HelloWorld JavaFx!" />
+            <Button graphicTextGap="10.0" layoutX="105.0" layoutY="78.0" mnemonicParsing="false" style="-fx-background-color: red;" text="Button" textAlignment="CENTER" textOverrun="WORD_ELLIPSIS" />
+            <AreaChart layoutX="231.0" layoutY="298.0" prefHeight="136.0" prefWidth="249.0">
+              <xAxis>
+                <CategoryAxis side="BOTTOM" />
+              </xAxis>
+              <yAxis>
+                <NumberAxis side="LEFT" />
+              </yAxis>
+            </AreaChart>
          </children>
       </Pane>
    </children>
